# swagger.yaml
@@ -1,24 +1,143 @@
 openapi: 3.0.0
 info:
-  title: API TFE
-  description: Optional multiline or single-line description in [CommonMark](http://commonmark.org/help/) or HTML.
+  title: API TFE Documentation
+  description: api en js avec le framework expressJS.
   version: 0.1.9
 servers:
-  - url: http://api.example.com/v1
-    description: Optional server description, e.g. Main (production) server
-  - url: http://staging-api.example.com
-    description: Optional server description, e.g. Internal staging server for testing
+  - url: http://localhost:8001/
+    description: Par défaut j'ai mis le port 8001, il faut le changer le fichier .env
+
 paths:
-  /users:
-    get:
-      summary: Returns a list of users.
-      description: Optional extended description in CommonMark or HTML.
+  /kine/create-patient:
+    post:
+      tags:
+        - "Kine"
+      summary: Retourne un objet Patient.
+      requestBody:
+        description: Optional description in *Markdown*
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Patient'
       responses:
         '200':    # status code
-          description: A JSON array of user names
+          description: un objet  avec success et response qui retourne un objet patient
+          content:
+            application/json: 
+              schema: 
+                $ref: '#/components/schemas/SuccessCreate'
+        '404': 
+          description: si un champ est vide ou ne correspond pas au type attendu
           content:
             application/json:
-              schema: 
-                type: array
-                items: 
+              schema:
+                $ref: '#/components/schemas/ErrorValidation'
+                
+                
+
+components:
+  schemas:
+    Patient:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        nom:
+          type: string
+        prenom:
+          type: string
+        password:
+          type: string
+          format: password
+          minLength: 8
+        email:
+          type: string
+          format: email
+        age : 
+          type: number
+        sexe : 
+          type: boolean
+          description: false = girl and true = men
+        pathologie:
+          type: string
+        numero_telephone :
+          type: string
+        seance_restante : 
+          type: number
+      required:
+        - nom
+        - prenom
+        - email
+        - password
+        - seance_restante
+        - pathologie
+        - age
+        - sexe
+        - 'numero_telephone'
+    ErrorValidation:
+      type: object
+      properties:
+        success:
+          type: boolean
+        response:
+          type: object
+          properties:
+            errors:
+              type: object
+              properties:
+                value:
                   type: string
+                  description: valeur du champ
+                msg:
+                  type: string
+                  description: le champ ne peut pas être vide
+                param:
+                  type: string
+                  description: "champ_name"
+                location:
+                  type: string
+                  description: "body"
+    SuccessCreate:
+      type: object
+      properties:
+        success:
+          type: boolean
+        response:
+          type: object
+          properties:
+            id:
+              type: integer
+              format: int64
+            nom:
+              type: string
+            prenom:
+              type: string
+            password:
+              type: string
+              format: password
+              minLength: 8
+            email:
+              type: string
+              format: email
+            age : 
+              type: number
+            sexe : 
+              type: boolean
+              description: false = girl and true = men
+            pathologie:
+              type: string
+            numero_telephone :
+              type: string
+            seance_restante : 
+              type: number
+          
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+
+security:
+  - bearerAuth : []
